<resources>
    <string name="app_name">TestApp2</string>
    <string name="koin_test">Koin Test</string>
    <string name="epoxy_test">Epoxy Test</string>
    <string name="coroutine_test">Coroutine Test</string>
    <string name="first_coroutine">First Coroutine</string>
    <string name="use_runblocking">Use RunBlocking</string>
    <string name="wait_job">Wait Job</string>
    <string name="use_launch">Use Launch</string>
    <string name="use_async">Use Async</string>
    <string name="flow_test">Flow Test</string>
    <string name="org">org</string>
    <string name="repository">repository</string>
    <string name="navigation_test">Navigation Test</string>
    <string name="gallery_test">Gallery Test</string>
    <string name="edit_text_test">EditText Test</string>
    <string name="epoxy_model_change_test">EpoxyModelChangeTest</string>
    <string name="list_adapter_test">ListAdapterTest</string>
    <string name="expand_test">ExpandTest</string>
</resources>
