<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="OnClickListener"
                type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".main.MainActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/btn_koin_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/koin_test" />


                <Button
                        android:id="@+id/btn_epoxy_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/epoxy_test" />

                <Button
                        android:id="@+id/btn_coroutine_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/coroutine_test" />

                <Button
                        android:id="@+id/btn_flow_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/flow_test" />

                <Button
                        android:id="@+id/btn_navigation_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/navigation_test" />

                <Button
                        android:id="@+id/btn_gallery_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/gallery_test" />

                <Button
                        android:id="@+id/btn_edit_text_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/edit_text_test" />

                <Button
                        android:id="@+id/btn_epoxy_model_change_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/epoxy_model_change_test" />

                <Button
                        android:id="@+id/btn_list_adapter_test"
                        style="Widget.TestApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="@{OnClickListener::onClick}"
                        android:text="@string/list_adapter_test" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>