<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
                name="onClickListener"
                type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btn_first_coroutine"
                    style="Widget.TestApp.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{onClickListener::onClick}"
                    android:text="@string/first_coroutine" />

            <Button
                    android:id="@+id/btn_use_runblocking"
                    style="Widget.TestApp.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{onClickListener::onClick}"
                    android:text="@string/use_runblocking" />

            <Button
                    android:id="@+id/btn_wait_job"
                    style="Widget.TestApp.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{onClickListener::onClick}"
                    android:text="@string/wait_job" />

        </LinearLayout>
    </ScrollView>
</layout>
